add Skills section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,38 @@
     </div>
   </section>
 
+
+  <section class="skills" id="skills">
+    <h2 class="section-title">Tech Stack & Skills</h2>
+    <p class="section-subtitle">Things I use to build digital magic 🧙‍♂️</p>
+  
+    <div class="skills-grid">
+      <div class="skill-card">
+        <i class="fab fa-html5"></i>
+        <h4>HTML5</h4>
+      </div>
+      <div class="skill-card">
+        <i class="fab fa-css3-alt"></i>
+        <h4>CSS3</h4>
+      </div>
+      <div class="skill-card">
+        <i class="fab fa-js-square"></i>
+        <h4>JavaScript</h4>
+      </div>
+      <div class="skill-card">
+        <i class="fab fa-react"></i>
+        <h4>React.js</h4>
+      </div>
+      
+      <div class="skill-card">
+        <i class="fab fa-git-alt"></i>
+        <h4>Git</h4>
+      </div>
+      
+    </div>
+  </section>
+  
+
   <script src="/assets/script.js"></script>
 </body>
 </html>
