add about me section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,35 @@
       
     </div>
   </section>
+
+  <section class="about" id="about">
+    <h2 class="section-title">About Me</h2>
+    <p class="section-subtitle">A quick dive into who I am 💡</p>
+  
+    <div class="about-container">
+      <div class="about-img">
+        <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="Profile Image" />
+      </div>
+  
+      <div class="about-content">
+        <p>
+          <i class="fas fa-user-astronaut"></i>
+          I'm <strong>Omi Kadam</strong>, a passionate Web Developer and Cloud Enthusiast who loves turning ideas into real-world solutions. From frontend finesse to backend logic, I build clean, efficient, and scalable experiences.
+        </p>
+        <p>
+          <i class="fas fa-code"></i>
+          I work with HTML, CSS, JavaScript, React.js, Node.js, and cloud services like AWS & Azure. I'm also exploring DevOps tools and Cybersecurity skills.
+        </p>
+        <p>
+          <i class="fas fa-bolt"></i>
+          I believe in continuous growth, strong coffee ☕, and creative problem solving. Let's connect and build something amazing!
+        </p>
+  
+        <a href="#contact" class="about-btn">Let's Connect 🚀</a>
+      </div>
+    </div>
+  </section>
+  
   
 
   <script src="/assets/script.js"></script>
