--- a/index.html
+++ b/index.html
@@ -85,6 +85,52 @@
       </div>
     </div>
   </section>
+
+  <section class="projects" id="projects">
+    <h2 class="section-title">Projects Showcase</h2>
+    <p class="section-subtitle">Turning ideas into reality 💡</p>
+  
+    <div class="projects-grid">
+      <!-- Project Card 1 -->
+      <div class="project-card">
+        <div class="project-icon">
+          <i class="fas fa-laptop-code"></i>
+        </div>
+        <h3>Portfolio Website</h3>
+        <p>A sleek personal portfolio with animations and responsive design built using HTML, CSS, and JS.</p>
+        <div class="project-links">
+          <a href="#" class="btn-live" target="_blank">Live</a>
+          <a href="#" class="btn-code" target="_blank">Code</a>
+        </div>
+      </div>
+  
+      <!-- Project Card 2 -->
+      <div class="project-card">
+        <div class="project-icon">
+          <i class="fas fa-store"></i>
+        </div>
+        <h3>EspressoEdge</h3>
+        <p>Coffee Shop Management web app with real-time inventory and sales dashboard. Built with React & Firebase.</p>
+        <div class="project-links">
+          <a href="#" class="btn-live" target="_blank">Live</a>
+          <a href="#" class="btn-code" target="_blank">Code</a>
+        </div>
+      </div>
+  
+      <!-- Project Card 3 -->
+      <div class="project-card">
+        <div class="project-icon">
+          <i class="fas fa-book-reader"></i>
+        </div>
+        <h3>Book Recommendation</h3>
+        <p>Frontend UI for a smart book suggestion platform using recommendation algorithms.</p>
+        <div class="project-links">
+          <a href="#" class="btn-live" target="_blank">Live</a>
+          <a href="#" class="btn-code" target="_blank">Code</a>
+        </div>
+      </div>
+    </div>
+  </section>
   
   
 
