add Testimonial section

--- a/index.html
+++ b/index.html
@@ -132,6 +132,64 @@
     </div>
   </section>
   
+  <section class="testimonials" id="testimonials">
+    <h2 class="section-title">Testimonials</h2>
+    <p class="section-subtitle">What people say about working with me 💬</p>
+  
+    <div class="testimonial-container">
+      <!-- Testimonial 1 -->
+      <div class="testimonial-card">
+        <div class="testimonial-header">
+          <img src="https://i.pravatar.cc/100?img=12" alt="User 1" />
+          <div>
+            <h3>Ritika Sharma</h3>
+            <p>Frontend Developer</p>
+            <div class="stars">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+        </div>
+        <p class="testimonial-text"><i class="fas fa-quote-left"></i> Working with Omi was fantastic! He’s super creative and always delivers high-quality, responsive UI designs with awesome animations. <i class="fas fa-quote-right"></i></p>
+      </div>
+  
+      <!-- Testimonial 2 -->
+      <div class="testimonial-card">
+        <div class="testimonial-header">
+          <img src="https://i.pravatar.cc/100?img=5" alt="User 2" />
+          <div>
+            <h3>Simran Kaur</h3>
+            <p>Cloud Engineer</p>
+            <div class="stars">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+        </div>
+        <p class="testimonial-text"><i class="fas fa-quote-left"></i> Omi’s understanding of cloud systems and DevOps is next-level. Highly professional and easy to collaborate with! <i class="fas fa-quote-right"></i></p>
+      </div>
+  
+      <!-- Testimonial 3 -->
+      <div class="testimonial-card">
+        <div class="testimonial-header">
+          <img src="https://i.pravatar.cc/100?img=7" alt="User 3" />
+          <div>
+            <h3>Aryan Mehta</h3>
+            <p>UI/UX Designer</p>
+            <div class="stars">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+          </div>
+        </div>
+        <p class="testimonial-text"><i class="fas fa-quote-left"></i> Omi’s frontend skills make every design I hand over look even better on screen. Fast, responsive, reliable! <i class="fas fa-quote-right"></i></p>
+      </div>
+    </div>
+  </section>
+  
   
 
   <script src="/assets/script.js"></script>
