add CTA section

--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@
     </div>
   </section>
   
+  <section class="cta" id="cta">
+    <div class="cta-content">
+      <h2 class="cta-title">Ready to start a new project?</h2>
+      <p class="cta-subtitle">Let’s bring your ideas to life and build something amazing together!</p>
+      <div class="cta-buttons">
+        <a href="#contact" class="cta-btn cta-btn-primary">
+          <i class="fas fa-envelope"></i> Get in Touch
+        </a>
+        <a href="#projects" class="cta-btn cta-btn-secondary">
+          <i class="fas fa-eye"></i> See My Work
+        </a>
+      </div>
+    </div>
+  </section>
   
 
   <script src="/assets/script.js"></script>
