add footer section

--- a/index.html
+++ b/index.html
@@ -246,6 +246,35 @@
     </div>
   </section>
   
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-links">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <a href="https://twitter.com" class="social-icon" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://github.com" class="social-icon" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://linkedin.com" class="social-icon" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://instagram.com" class="social-icon" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+    </div>
+  </footer>
   
 
   <script src="/assets/script.js"></script>
